The challenge didn't have a requirement that imposed no vertical scrollbar for the html page. So, I assumed the page can have a vertical scrollbar. So, I didn't enforce a specific height for the component or any of its children elements. And that simply solved the problem.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,7 @@ html,
 body {
   font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", sans-serif;
-  height: 100vh;
+
   margin: 0;
   background-color: var(--slate-300);
 }
@@ -41,13 +41,8 @@ h1 {
   margin: 0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
-
 .header {
-  flex-basis: 10vh;
+  padding-top: 30px;
 }
 .header-title {
   text-align: center;
@@ -59,18 +54,15 @@ body {
 
   color: var(--slate-900);
 }
-.main {
-  position: relative;
-  flex-grow: 1;
-}
 
+.main {
+  padding: 50px 0;
+}
 .qr-code-component {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0 auto;
 
   width: 288px;
+
   padding: var(--spacing-200);
   padding-bottom: 40px;
   border-radius: 20px;
@@ -84,13 +76,11 @@ body {
 }
 .qr-code-image {
   border-radius: 10px;
-
   width: 288px;
-  flex-grow: 1;
+  height: 288px;
 }
 .qr-code-component-textual-content {
   padding: 0 var(--spacing-200);
-
   text-align: center;
 }
 .qr-code-component-title {
@@ -112,7 +102,6 @@ body {
   color: var(--slate-500);
 }
 .footer {
-  flex-basis: 3vh;
 }
 .attribution {
   font-size: 11px;
